# graph-ir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
artefacts/: default_promotion_table.csv  guide.txt
examples/src/: test.cpp
include/: abstract_operator.h  api.h  backend.h  definitions.h  enums.h  exceptions.h  export.h  extra.h  function.h  graph.h  graph_ir.h  helpers.h  metadiff.h  mock.h  node.h  operators.h  optimization.h  os.h  print.h  props.h  shared.h  utils.h  visual.h
include/api/: arithmetic.h  constant.h  debug.h  elementwise.h  general.h  grad.h  index.h  input.h  linalg.h  logical.h  optimized.h  reduction.h  shape.h  special.h
include/backend/: abstract.h  mock.h  utils.h
include/export/: cytoscape.h  graphviz.h  json.h  protobuf.h
include/operators/: abstract.h  arithmetic.h  base.h  constant.h  debug.h  elementwise.h  index.h  input.h  linalg.h  logical.h  multy_node.h  operators.h  optimized.h  random.h  reduction.h  shape.h  special.h
include/optimization/: simple.h
include/visual/: cytoscape.h  graphviz.h
mock_backend/: CMakeLists.txt
mock_backend/include/: mock.h
mock_backend/src/: backend.cpp  evaluator.cpp  source_gen.cpp
src/: abstract_operator.cpp  definitions.cpp  exceptions.cpp  graph.cpp  helpers.cpp  mock.cpp  node.cpp  os.cpp  print.cpp  props.cpp  test.cpp  utils.cpp
src/api/: arithmetic.cpp  constant.cpp  debug.cpp  elementwise.cpp  general.cpp  grad.cpp  input.cpp  linalg.cpp  logical.cpp  optimized.cpp  random.cpp  reduction.cpp  shape.cpp  special.cpp
src/backend/: mock.cpp
src/export/: cytoscape.cpp  json.cpp
src/operators/: abstract.cpp  arithmetic.cpp  base.cpp  constant.cpp  elementwise.cpp  input.cpp  linalg.cpp  logical.cpp  optimized.cpp  random.cpp  reduction.cpp  shape.cpp  special.cpp
src/visual/: cytoscape.cpp
